# language-app-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml
app/: config.py  database.py  db_seeder.py  main.py  models.py  openai_service.py  routes.py  schemas.py
tests/: conftest.py  test_grammar.py  test_questions.py  test_words.py
